Visit Planning/src/objects/Visit_Report__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Plan</label>
        <referenceTo>Visit_Plan__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visit Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{00000000}</displayFormat>
        <label>Visit Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>